src.old/8139cp/4.x/compile.log
/opt/dsm-kernel/epyc7002/redpill-modules/8139cp/8139cp.c: In function 'cp_rx_poll':
/opt/dsm-kernel/epyc7002/redpill-modules/8139cp/8139cp.c:564:3: error: implicit declaration of function '__napi_complete'; did you mean 'napi_complete'? [-Werror=implicit-function-declaration]
   __napi_complete(napi);
   ^~~~~~~~~~~~~~~
   napi_complete
/opt/dsm-kernel/epyc7002/redpill-modules/8139cp/8139cp.c: At top level:
/opt/dsm-kernel/epyc7002/redpill-modules/8139cp/8139cp.c:1587:3: error: 'const struct ethtool_ops' has no member named 'get_settings'; did you mean 'get_strings'?
  .get_settings  = cp_get_settings,
   ^~~~~~~~~~~~
   get_strings
/opt/dsm-kernel/epyc7002/redpill-modules/8139cp/8139cp.c:1587:19: error: initialization of 'int (*)(struct net_device *, struct ethtool_rxnfc *, u32 *)' {aka 'int (*)(struct net_device *, struct ethtool_rxnfc *, unsigned int *)'} from incompatible pointer type 'int (*)(struct net_device *, struct ethtool_cmd *)' [-Werror=incompatible-pointer-types]
  .get_settings  = cp_get_settings,
                   ^~~~~~~~~~~~~~~
/opt/dsm-kernel/epyc7002/redpill-modules/8139cp/8139cp.c:1587:19: note: (near initialization for 'cp_ethtool_ops.get_rxnfc')
/opt/dsm-kernel/epyc7002/redpill-modules/8139cp/8139cp.c:1588:3: error: 'const struct ethtool_ops' has no member named 'set_settings'; did you mean 'get_strings'?
  .set_settings  = cp_set_settings,
   ^~~~~~~~~~~~
   get_strings
/opt/dsm-kernel/epyc7002/redpill-modules/8139cp/8139cp.c:1588:19: error: initialization of 'int (*)(struct net_device *, struct ethtool_rxnfc *)' from incompatible pointer type 'int (*)(struct net_device *, struct ethtool_cmd *)' [-Werror=incompatible-pointer-types]
  .set_settings  = cp_set_settings,
                   ^~~~~~~~~~~~~~~
/opt/dsm-kernel/epyc7002/redpill-modules/8139cp/8139cp.c:1588:19: note: (near initialization for 'cp_ethtool_ops.set_rxnfc')
/opt/dsm-kernel/epyc7002/redpill-modules/8139cp/8139cp.c:1874:21: error: initialization of 'void (*)(struct net_device *, unsigned int)' from incompatible pointer type 'void (*)(struct net_device *)' [-Werror=incompatible-pointer-types]
  .ndo_tx_timeout  = cp_tx_timeout,
                     ^~~~~~~~~~~~~
/opt/dsm-kernel/epyc7002/redpill-modules/8139cp/8139cp.c:1874:21: note: (near initialization for 'cp_netdev_ops.ndo_tx_timeout')
cc1: some warnings being treated as errors
make[1]: *** [scripts/Makefile.build:280: /opt/dsm-kernel/epyc7002/redpill-modules/8139cp/8139cp.o] Error 1
make: *** [Makefile:1822: /opt/dsm-kernel/epyc7002/redpill-modules/8139cp] Error 2
